# i3-workspace-groups

./: .editorconfig  .envrc  .gitignore  .gitlab-ci.yml  CHANGELOG.md  LICENSE  README.md  environment.yml  pylintrc  pyproject.toml  release_to_pypi.sh  requirements-dev.txt  requirements-py37-dev.txt  requirements-py37.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml
i3wsgroups/: __init__.py  autoname_workspaces.py  cli.py  config.py  controller.py  default_config.toml  i3_proxy.py  i3_workspace_groups.py  i3_workspace_groups_tool.py  icons.py  log_util.py  logger.py  polybar_module_updater.py  py_client.py  workspace_names.py
req/: base.in  base.txt  conda_env.yml  dev-extra.in  dev-extra.txt  dev.in  dev.txt
scripts/: i3-assign-workspace-to-group  i3-autoname-workspaces  i3-focus-on-workspace  i3-groups-polybar-module  i3-groups-polybar-module-updater  i3-move-to-workspace  i3-rename-workspace  i3-select-workspace-group  i3-switch-active-workspace-group  i3-workspace-groups  i3-workspace-groups-client  i3-workspace-groups-nc  move-workspace-to-group  switch-active-workspace-group
tests/: test_config.py  test_i3_workspace_groups.py  test_py_sockets.py  test_util.py  test_workspace_names.py
tools/: lint  pipc  release_to_pypi.sh
